# comfyui-stillfront

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
py/: alibaba_wan25_image_edit.py  bytedance_seedream_v4.py  bytedance_seedream_v4_sequential.py  flux_controlnet_union_pro_2.py  flux_kontext_max.py  google_nano_banana_edit.py  google_nano_banana_pro_edit.py  google_nano_banana_pro_edit_multi.py  google_nano_banana_pro_edit_ultra.py  google_nano_banana_pro_text_to_image.py  google_nano_banana_pro_text_to_image_ultra.py  google_nano_banana_text_to_image.py  google_veo31_fast_image_to_video.py  google_veo31_image_to_video.py  google_veo31_reference_to_video.py  google_veo31_text_to_video.py  image_upscaler.py  infinitetalk.py  llm_chat.py  openai_sora2_text_to_video.py  openai_sora2_text_to_video_pro.py  prompt_list_node.py  qwen_image_edit.py  qwen_image_edit_lora.py  qwen_image_edit_plus_lora.py  qwen_image_text_to_image.py  qwen_image_text_to_image_lora.py  qwen_resolution_node.py  vertexai_gemini3_pro_image.py  vertexai_gemini3_pro_image_edit.py  vertexai_imagen3_text_to_image.py  vertexai_imagen4_text_to_image.py  vertexai_imagen4_upscale.py  vertexai_utils.py  vertexai_veo31_image_to_video.py  vertexai_veo31_text_to_video.py  wan_22_animate.py  wan_2_5_image_to_video_fast.py  wan_2_5_text_to_image.py  wan_2_5_text_to_video.py  (+17 more)
web/js/: nano_banana_dynamic_inputs.js
