[project]
name = "stillfront"
description = "Consolidated collection of custom ComfyUI nodes with LLM integration (Claude, Gemini), WaveSpeed API support, and utility nodes for resolution presets and dynamic prompts. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.31.0", "pillow>=10.0.0", "numpy<2.0.0", "torch", "pydantic>=2.0.0", "google-genai>=1.0.0", "google-cloud-storage>=2.0.0"]

[project.urls]
Repository = "https://github.com/razvanmatei-sf/comfyui-stillfront"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/razvanmatei-sf/comfyui-stillfront/wiki"
"Bug Tracker" = "https://github.com/razvanmatei-sf/comfyui-stillfront/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-stillfront"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

